# studentsDataBase

./: CMakeLists.txt  Makefile  Makefile.txt  README.md  c-cpp.yml  main.cpp
.github/workflows/: c-cpp.yml
